--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -17,6 +17,7 @@ tags:
 [[2024-05-16]]: [[in praise of syncretism brown]]; [[impurity]]
 [[2024-05-17]]: surprising resonance on my post about [[a sunday walk]] with Lea
 [[2024-05-18]]: My voice (as a writer writing about a liberative spirituality) has to exist; [[questionnaire on spirituality]]; [[2024-05-18 kiitsu kyokai walk]]
+[[2024-05-23]]: [[holy spirit]]
 
 [[2024-06-14]]: Beginning of GBL personal essay entry
 [[2024-06-15]]: Outline of following sections of the GBL personal essay entry
