--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -18,6 +18,9 @@ tags:
 [[2024-05-17]]: surprising resonance on my post about [[a sunday walk]] with Lea
 [[2024-05-18]]: My voice (as a writer writing about a liberative spirituality) has to exist; [[questionnaire on spirituality]]; [[2024-05-18 kiitsu kyokai walk]]
 [[2024-05-23]]: [[holy spirit]]
+[[2024-05-24]]: [[spirit of life]]
+[[2024-05-25]]: outline for [[bathala wala intro]]
+[[2024-05-27]]: [[ala-ala]]
 
 [[2024-06-14]]: Beginning of GBL personal essay entry
 [[2024-06-15]]: Outline of following sections of the GBL personal essay entry
