--- a/content/thoughts/2023-03 to 2023-10 diary.md
+++ b/content/thoughts/2023-03 to 2023-10 diary.md
@@ -37,7 +37,7 @@ tags:
 [[2023-05-02]]: [[The poet's state of mind]]
 [[2023-05-03]]: [[poems/on an afternoon walk i saw fireflies]]
 [[2023-05-04]]: More thoughts on Ocean Vuong; Being divided no more; Emulating poet prose writers vs. plain language writers
-[[2023-05-05]]: More thoughts on Ocean Vuong, uncluding, somehow, he reminds me of [[thoughts/rem tanauan]]; [[thoughts/writing prose as a poet]]
+[[2023-05-05]]: More thoughts on Ocean Vuong, uncluding, somehow, he reminds me of [[rem tanauan]]; [[thoughts/writing prose as a poet]]
 [[2023-05-06]]: [[the very first memory]]
 [[2023-05-08]]: Hotter at LB; Controlling Messenger
 [[2023-05-09]]: How to Feel Miserable as an Artist, which I translated to [[translations/paano maging miserableng artist]]
