--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -23,6 +23,9 @@ tags:
 [[2024-05-27]]: [[ala-ala]]; [[2024-05-27 kiitsu kyokai walk]]
 
 [[2024-06-02]]: Mga paghahanda sa PRS 17
+[[2024-06-03]]: Life richer through writing; a healthier way of articulating standards for a partner; fulfilled relationship with Lea
+[[2024-06-10]]: [[2024-06-10 kiitsu kyokai walk]]
+[[2024-06-12]]: Pangasinan bilang "side project"; Jiyu shukyo bilang main project; Kung saang wika magsusulat; Writing projects; Deaf essay outline
 
 [[2024-06-14]]: Beginning of GBL personal essay entry
 [[2024-06-15]]: Outline of following sections of the GBL personal essay entry
