--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -26,9 +26,10 @@ tags:
 [[2024-06-03]]: Life richer through writing; a healthier way of articulating standards for a partner; fulfilled relationship with Lea
 [[2024-06-10]]: [[2024-06-10 kiitsu kyokai walk]]
 [[2024-06-12]]: Pangasinan bilang "side project"; Jiyu shukyo bilang main project; Kung saang wika magsusulat; Writing projects; Deaf essay outline
-
 [[2024-06-14]]: Beginning of GBL personal essay entry
 [[2024-06-15]]: Outline of following sections of the GBL personal essay entry
-[[2024-06-17]]: Continuation of GBL personal essay entry: How I learned FSL
-
+[[2024-06-17]]: Continuation of GBL personal essay entry: How I learned FSL; [[malunggay]]
+[[2024-06-20]]: Email to Andrew on juxtaposition
 [[2024-06-28]]: Kiitsu Kyōkai walk with Lea on [[family]]
+
+[[2024-07-25]]: [[suya]]
