--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -30,7 +30,10 @@ tags:
 [[2024-06-15]]: Outline of following sections of the GBL personal essay entry
 [[2024-06-17]]: Continuation of GBL personal essay entry: How I learned FSL; [[malunggay]]; [[2024-06-17 kiitsu kyokai walk]]
 [[2024-06-20]]: Email to Andrew on juxtaposition
- 
+[[2024-06-21]]: Alternative to the ministerial life: writing, walking, jiyu shukyo, workshops and mentorships; categories of my projects; the subject of jiyu shukyo; capturing the subject of jiyu shukyo through walking; what I want my readers to feel
+[[2024-06-22]]: Few rains in June; Postponing Muntinlupa trip
+[[2024-06-23]]: [[think about land when walking]]
+
 [[2024-06-28]]: Kiitsu Kyōkai walk with Lea on [[family]]
 
 [[2024-07-25]]: [[suya]]
