--- a/content/uman 2023-11.md
+++ b/content/uman 2023-11.md
@@ -51,7 +51,7 @@ In my journal entry dated [[2023-11-23]], I began to dream:
 
 And so, I asked: why not convert writing itself into a form of ministry? I liked the sound of this idea. But how does one convert writing into a form of ministry?
 
-The first thing I did was to return to spiritual writing. Spiritual writing is something widely explored by the [[thoughts/transcendentalism|American Transcendentalists]], a group led by no other than Emerson himself, Imaoka's hero of free religion. According to Lawrence Buell in his book [[literature/literary transcendentalism buell|Literary Transcendentalism]], one of the things the transcendentalists explored in the nineteenth century was how writing can both be a tool to go deeper into transcendentalism (i.e., to live a unique ethical life) and a vehicle to express the creative genius they believe reside within every human being.
+The first thing I did was to return to spiritual writing. Spiritual writing is something widely explored by the [[transcendentalism|American Transcendentalists]], a group led by no other than Emerson himself, Imaoka's hero of free religion. According to Lawrence Buell in his book [[literature/literary transcendentalism buell|Literary Transcendentalism]], one of the things the transcendentalists explored in the nineteenth century was how writing can both be a tool to go deeper into transcendentalism (i.e., to live a unique ethical life) and a vehicle to express the creative genius they believe reside within every human being.
 
 These goals make sense. For writing to become a spiritual and religious practice, it has to help one strengthen one's spirituality while simultaneously helping one express that spirituality through words.
 
