--- a/content/uman 2023-09.md
+++ b/content/uman 2023-09.md
@@ -28,7 +28,7 @@ In response to my reading of [[thoughts/a religion of ones own by moore|A Religi
 
 # Mind Walks
 
-My favorite thought note this month is: [[thoughts/art is never finished|Art is never finished]]. I wrote this while working on an essay I later sent to a literary journal. It talks about this modern bias to complete a work of art and why this could be going against the very nature of art.
+My favorite thought note this month is: [[art is never finished|Art is never finished]]. I wrote this while working on an essay I later sent to a literary journal. It talks about this modern bias to complete a work of art and why this could be going against the very nature of art.
 
 The best quote I encountered in September is from Andrew Anabi:
 
