--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -37,3 +37,5 @@ tags:
 [[2024-06-28]]: Kiitsu Kyōkai walk with Lea on [[family]]
 
 [[2024-07-25]]: [[suya]]
+
+[[2024-07-31]]: [[zine-nilay]] draft
