--- a/content/uman 2023-10.md
+++ b/content/uman 2023-10.md
@@ -81,7 +81,7 @@ I remembered Rem.
 
 # Books
 
-On October, I finished reading [[literature/refusing heaven by jack gilbert|Refusing Heaven by Jack Gilbert]], which I enjoyed.
+On October, I finished reading [[refusing heaven gilbert|Refusing Heaven by Jack Gilbert]], which I enjoyed.
 
 I started reading [[literature/the existentialists survival guide marino|The Existentialist's Survival Guide by Marino]] and [[literature/bluets nelson|Bluets by Nelson]].
 
