--- a/content/2022-10-14 seeds.md
+++ b/content/2022-10-14 seeds.md
@@ -6,7 +6,7 @@ tags:
 - "seeds"
 ---
 
-- [[poems/evening at pili drive]]
+- [[evening at pili drive]]
 
 I sit here along Pili Drive
 On an unmovable rock
