--- a/content/2022-11-05 seeds.md
+++ b/content/2022-11-05 seeds.md
@@ -6,7 +6,7 @@ tags:
 - "seeds"
 ---
 
-- [[poems/pagbaba sa batis]]
+- [[pagbaba sa batis]]
 
 Filipino language ay middle way
 1. Tutubing kalabaw
