--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -38,6 +38,9 @@ tags:
 
 [[2024-06-28]]: Kiitsu Kyōkai walk with Lea on [[family]]
 
+[[2024-07-08]]: Entry kayari impansakit tan sakey simba kayari event ed Urdaneta
+[[2024-07-11]]: Posible topic na essay ed Pangasinan: "ipawil"; pangguston napaaralem so emben ko'd essay
+
 [[2024-07-25]]: [[suya]]
 
 [[2024-07-31]]: [[zine-nilay]] draft
