--- a/content/thoughts/2023-03 to 2023-10 diary.md
+++ b/content/thoughts/2023-03 to 2023-10 diary.md
@@ -66,10 +66,10 @@ tags:
 
 [[2023-06-01]]: Summary of May 2023
 [[2023-06-02]]: Choosing [[a life in letters]] vs other options like psychology; Thoughts on Maui as a friend
-[[2023-06-04]]: Preparing for [[thoughts/anww20]]; Meeting with Ili for brand strategy; Enjoyed learning about my camera yesterday
+[[2023-06-04]]: Preparing for [[anww20]]; Meeting with Ili for brand strategy; Enjoyed learning about my camera yesterday
 [[2023-06-05]]: Thoughts on the [[ANWW20 Presentation]]
 [[2023-06-06]]: More thoughts on [[writing]]
-[[2023-06-08]]: Mindset pep talk for [[thoughts/anww20]]; ANWW20 as threshold; The bigger project; Clothes to bring
+[[2023-06-08]]: Mindset pep talk for [[anww20]]; ANWW20 as threshold; The bigger project; Clothes to bring
 [[2023-06-10]]: [[ANWW20 Lecture Jhoanna Lynn Cruz]]; Some questions regarding the nature of my ANWW20 essay
 [[2023-06-14]]: [[thoughts/my impressions on anww20]]
 [[2023-06-16]]: Bernice's wedding
