--- a/content/uman 2023-12.md
+++ b/content/uman 2023-12.md
@@ -67,7 +67,7 @@ With the help of a mentor, I was also able to think about ways to print my photo
 
 # Walking as Intersectional
 
-One of the feedback I got from [[thoughts/anww20|ANWW20]] was that I should begin thinking about "others" when writing about my walks, not necessarily integrate them into my writing but just think about them. These others share the roads I use but are of a different gender, disability status, ethnicity, socioeconomic status, age, etc. Aside from these, I should also begin thinking about the many others who don't walk because of physical disability or the current social structures that make physical spaces unsafe for them.
+One of the feedback I got from [[anww20|ANWW20]] was that I should begin thinking about "others" when writing about my walks, not necessarily integrate them into my writing but just think about them. These others share the roads I use but are of a different gender, disability status, ethnicity, socioeconomic status, age, etc. Aside from these, I should also begin thinking about the many others who don't walk because of physical disability or the current social structures that make physical spaces unsafe for them.
 
 Some months ago, I mentioned on [[uman 2023-10|this newsletter]] that I was working with a fellow writer on exploring the walking methodology through epistolary essays. I spent a significant chunk of my December in dialogue with her regarding the intersectional nature of walking and how we, as writers, could bring this sensitivity to intersectionality into our works.
 
