--- a/content/uman 2023-09.md
+++ b/content/uman 2023-09.md
@@ -56,7 +56,7 @@ I published three newsletters in September:
 
 Last August, I wrote [[mulimuli pangasiniani|a lyric essay]] in Pangasinan and its [[translations/perturbations on pangasiniani|English translation]] and sent it for my application to the Cordillera Creative Writing Workshop (CCWW). The rejection of my application got me thinking a lot about how I'm approaching these applications and my writing life. I'll write a more detailed essay about this, but here's my new personal guiding principle when sending entries to workshops, fellowships, and contests.
 
-Since the acceptance rate to these writing events is pretty low (which means I was just fortunate to get in [[thoughts/anww20|ANWW20]]!), the healthiest attitude when applying is to expect rejection. Then, use the application process to these events to force you to do your work. Remember that this is the assumption of most of these events anyway—that you are bringing a work in progress. So do that.
+Since the acceptance rate to these writing events is pretty low (which means I was just fortunate to get in [[anww20|ANWW20]]!), the healthiest attitude when applying is to expect rejection. Then, use the application process to these events to force you to do your work. Remember that this is the assumption of most of these events anyway—that you are bringing a work in progress. So do that.
 
 Whether you get in or not (highly likely you won't), you were able to move a personal project. Everything should be about your personal projects. Articulate what your art stands for, focus on creating a portfolio around that stand, and never rely on others to tell you you're good or publishable. Stick to your gut feeling and use contests, workshops, and fellowships to serve your vision, not the other way around.
 
