--- a/content/uman 2024-01.md
+++ b/content/uman 2024-01.md
@@ -29,7 +29,7 @@ On the first week of January 2024, I took some time to write [[uman 2023-12|the 
 
 # Walking Baguio
 
-After finishing my annual review, I immediately shifted my attention to preparing for my [[tags/tall tales 1|week-long walk of Baguio]] from January 15 to 21. To consult about the design of the walk, I called [[thoughts/louise far|Louise Far]]. The first question she asked me was, *"How will you protect yourself while doing it?"* The question caught me by surprise. I knew the walk could be triggering, but I didn't consider this in my initial design.
+After finishing my annual review, I immediately shifted my attention to preparing for my [[tags/tall tales 1|week-long walk of Baguio]] from January 15 to 21. To consult about the design of the walk, I called [[louise far|Louise Far]]. The first question she asked me was, *"How will you protect yourself while doing it?"* The question caught me by surprise. I knew the walk could be triggering, but I didn't consider this in my initial design.
 
 My consultation with Louise convinced me to refocus the project from merely remembering to also returning and reimagining the places I'm revisiting. As I articulated in the [[baguio walk 1|introduction]] to the walk, I decided to treat each walk like a meditation anchored in the present moment, which served as a refuge to potentially triggering memories and emotions.
 
