--- a/content/uman 2022-07.md
+++ b/content/uman 2022-07.md
@@ -77,7 +77,7 @@ One of my goals last July was to try to get published somewhere. I am not doing 
 
 # Photography
 
-I used Kaufman's ideas from *[[The First 20 Hours — Kaufman|The First 20 Hours]]* to identify the minimum viable steps I need to take to learn photography. The result: I was able to finalize [[My photography learning roadmap|my photography learning roadmap]]. By the way, I finally invested in an entry-level pro camera. I'm currently slowing down with learning photography, but I will jump right into the camera once I feel the photography itch again.
+I used Kaufman's ideas from *[[The First 20 Hours — Kaufman|The First 20 Hours]]* to identify the minimum viable steps I need to take to learn photography. The result: I was able to finalize [[my photography learning roadmap|my photography learning roadmap]]. By the way, I finally invested in an entry-level pro camera. I'm currently slowing down with learning photography, but I will jump right into the camera once I feel the photography itch again.
 
 # Walking
 
