--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -39,7 +39,8 @@ tags:
 [[2024-06-28]]: Kiitsu Kyōkai walk with Lea on [[family]]
 
 [[2024-07-08]]: Entry kayari impansakit tan sakey simba kayari event ed Urdaneta
-[[2024-07-11]]: Posible topic na essay ed Pangasinan: "ipawil"; pangguston napaaralem so emben ko'd essay
+[[2024-07-11]]: Posible topic na essay ed Pangasinan: "ipawil"; pangguston napaaralem so emben ko'd essay; [[why I write]]
+[[2024-07-12]]: [[akar mi nen Papa paonlad baley na San Jacinto]]; revision of [[Obong]]
 
 [[2024-07-25]]: [[suya]]
 
