--- a/content/2024-08-11 seeds.md
+++ b/content/2024-08-11 seeds.md
@@ -15,3 +15,7 @@ Dogs barking
 Walking projects are time-bound as are all projects. But there is always the risk that one may no longer walk either through sickness, disability, or old age. And so to do a walking project is to be reminded of one's mortality. One balances presence and hastiness.
 
 The rythmic sound of my feet on the slipper.
+
+Beliefs embedded in the landscape
+Doctrines materialized embodied
+How do we free from them and is it possible?
