--- a/content/uman 2023-08.md
+++ b/content/uman 2023-08.md
@@ -58,7 +58,7 @@ I've always been a lone wolf and I've resisted collaborations. Although I've str
 
 That said, I don't mind the occasional collaboration especially when the project is right and I'm doing it with the right people.
 
-I'm currently doing a collaborative writing project with a co-fellow at the Ateneo National Writer's Workshop: [[thoughts/jesa suganob|Jesa Suganob]]. I'm a fan of Jesa's work and we connected well during the workshop because our works both involved walking.
+I'm currently doing a collaborative writing project with a co-fellow at the Ateneo National Writer's Workshop: [[jesa suganob|Jesa Suganob]]. I'm a fan of Jesa's work and we connected well during the workshop because our works both involved walking.
 
 Our project involves doing a series of walks from August to the end of September. We're free to choose on which days to do the walking as long as we use each walk as a prompt for writing an epistolary essay on that walk. The essay is directed towards each other, but we won't send the essays until the end of the project.
 
