--- a/content/uman 2023-10.md
+++ b/content/uman 2023-10.md
@@ -19,7 +19,7 @@ I should've known by now that it is when life is quiet, when the ghosts of past 
 
 # Epistolary Essays on Walking
 
-I mentioned last [[uman 2023-08|August]] that [[thoughts/jesa suganob|Jesa Suganob]] and I are collaborating on a writing project exploring [[walking]] through epistolary essays. On October, we finished revising all our essays and sent them to each other. We've began exchanging impressions about each other's work and are currently discussing how best to move the project forward. I can't wait where this collaboration will take us. Wherever it goes, you'll be the first to know.
+I mentioned last [[uman 2023-08|August]] that [[jesa suganob|Jesa Suganob]] and I are collaborating on a writing project exploring [[walking]] through epistolary essays. On October, we finished revising all our essays and sent them to each other. We've began exchanging impressions about each other's work and are currently discussing how best to move the project forward. I can't wait where this collaboration will take us. Wherever it goes, you'll be the first to know.
 
 If you're curious to see what an epistolary essay on walking looks like, here's an example: [[2023-09-02 letter to j|2023-09-02 letter to J]].
 
