--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -47,3 +47,4 @@ tags:
 [[2024-07-31]]: [[zine-nilay]] draft
 
 [[2024-08-14]]: [[Mt. Balungao]]; [[Tondaligan]]
+[[2024-08-15]]: [[Say unonan impanakar ko]]; [[P Deguzman Street]]; [[Say unaan kon tulor]]
