--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -41,10 +41,11 @@ tags:
 [[2024-07-08]]: Entry kayari impansakit tan sakey simba kayari event ed Urdaneta
 [[2024-07-11]]: Posible topic na essay ed Pangasinan: "ipawil"; pangguston napaaralem so emben ko'd essay; [[why I write]]
 [[2024-07-12]]: [[akar mi nen Papa paonlad baley na San Jacinto]]; revision of [[Obong]]
+[[2024-07-14]]: Hindi na itutuloy ang sanaysay tungkol sa mga Deaf pero maaring gamitin sa one-act play
 
 [[2024-07-25]]: [[suya]]
 
 [[2024-07-31]]: [[zine-nilay]] draft
 
-[[2024-08-14]]: [[Mt. Balungao]]; [[Tondaligan]]
-[[2024-08-15]]: [[Say unonan impanakar ko]]; [[P Deguzman Street]]; [[Say unaan kon tulor]]
+[[2024-08-14]]: [[Kalab (Mt. Balungao)]]; [[Tondaligan]]
+[[2024-08-15]]: [[Apdang]]; [[P Deguzman Street]]; [[Ponpon]]
