--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -48,4 +48,4 @@ tags:
 [[2024-07-31]]: [[zine-nilay]] draft
 
 [[2024-08-14]]: [[Kalab (Mt. Balungao)]]; [[Tondaligan]]
-[[2024-08-15]]: [[Apdang]]; [[P Deguzman Street]]; [[Ponpon]]
+[[2024-08-15]]: [[Apdang (Abung ed Santa Maria)]]; [[Salilig (P Deguzman Street)]]; [[Ponpon]]
