--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -47,5 +47,6 @@ tags:
 
 [[2024-07-31]]: [[zine-nilay]] draft
 
+[[2024-08-10]]: On [[mula sa gulod alcarde|Mula sa Gulod]] by [[Ryan Cezar Alcarde]]
 [[2024-08-14]]: [[Kalab (Mt. Balungao)]]; [[Tondaligan]]
 [[2024-08-15]]: [[Apdang (Abung ed Santa Maria)]]; [[Salilig (P Deguzman Street)]]; [[Ponpon]]
