--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -42,6 +42,7 @@ tags:
 [[2024-07-11]]: Posible topic na essay ed Pangasinan: "ipawil"; pangguston napaaralem so emben ko'd essay; [[why I write]]
 [[2024-07-12]]: [[akar mi nen Papa paonlad baley na San Jacinto]]; revision of [[Obong]]
 [[2024-07-14]]: Hindi na itutuloy ang sanaysay tungkol sa mga Deaf pero maaring gamitin sa one-act play
+[[2024-07-15]]: Tigdas ni Lea; Pagsusulat ng tahimik; Pagiimbita sa bahay; Pagrerevise sa Obong; [[Sa Larawang Ito]]
 
 [[2024-07-25]]: [[suya]]
 
