--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -44,11 +44,12 @@ tags:
 [[2024-07-14]]: Hindi na itutuloy ang sanaysay tungkol sa mga Deaf pero maaring gamitin sa one-act play
 [[2024-07-15]]: Tigdas ni Lea; Pagsusulat ng tahimik; Pagiimbita sa bahay; Pagrerevise sa Obong; [[Sa Larawang Ito]]
 [[2024-07-16]]: How I am pursuing divergence in my current writing life; [[my personal history of writing]]; outline of a one-act play about sign language
+[[2024-07-17]]: Thoughts on designing a writing life; GBL entries; Spiritual writing
 
 [[2024-07-25]]: [[suya]]
 
 [[2024-07-31]]: [[zine-nilay]] draft
 
 [[2024-08-10]]: On [[mula sa gulod alcarde|Mula sa Gulod]] by [[Ryan Cezar Alcarde]]
-[[2024-08-14]]: [[Kalab (Mt. Balungao)]]; [[Digdig (Tondaligan)]]
-[[2024-08-15]]: [[Apdang (Abung ed Santa Maria)]]; [[Salilig (P Deguzman Street)]]; [[Ponpon]]
+[[2024-08-14]]: [[calab mt balungao]]; [[mandigdig tondaligan]]
+[[2024-08-15]]: [[tayacdang san jacinto]]; [[onsalilig mangaldan]]; [[ponpon san jacinto]]
