--- a/content/uman 2023-07.md
+++ b/content/uman 2023-07.md
@@ -36,7 +36,7 @@ Lastly, I added my essay [[a never-ending walk|A Never-ending Walk]] in [[though
 
 The best books I read this month were:
 - [[thoughts/isang taong maghapon by paolo tiausas|Isang Taong Maghapon by Paolo Tiausas]]
-- [[literature/inahan sa sugilanon by louise far|Inahan sa Sugilanon by Louise Far]]
+- [[inahan sa sugilanon far|Inahan sa Sugilanon by Louise Far]]
 
 I also re-read [[the collapse of what separates us serrano|The Collapse of What Separates Us by Vincenz Serrano]] to study the poems closely. I'll be sharing my notes on the site soon.
 
