--- a/content/uman 2023-10.md
+++ b/content/uman 2023-10.md
@@ -83,7 +83,7 @@ I remembered Rem.
 
 On October, I finished reading [[refusing heaven gilbert|Refusing Heaven by Jack Gilbert]], which I enjoyed.
 
-I started reading [[literature/the existentialists survival guide marino|The Existentialist's Survival Guide by Marino]] and [[literature/bluets nelson|Bluets by Nelson]].
+I started reading [[the existentialists survival guide marino|The Existentialist's Survival Guide by Marino]] and [[literature/bluets nelson|Bluets by Nelson]].
 
 In the morning, I read and savor one meditation from [[literature/being home norris and sibley|Being Home by Norris and Sibley]], a book I borrowed from Rem's library.
 
