--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -53,3 +53,5 @@ tags:
 [[2024-08-10]]: On [[mula sa gulod alcarde|Mula sa Gulod]] by [[Ryan Cezar Alcarde]]
 [[2024-08-14]]: [[calab mt balungao]]; [[mandigdig tondaligan]]
 [[2024-08-15]]: [[tayacdang san jacinto]]; [[onsalilig mangaldan]]; [[ponpon san jacinto]]
+
+[[2024-08-24]]: [[licaulicau dagupan]]
