--- a/content/uman 2023-09.md
+++ b/content/uman 2023-09.md
@@ -41,8 +41,8 @@ The best quote I encountered in September is from Andrew Anabi:
 >Therefore, the best way to cherish life is to remind yourself of life's impermanence. It is to remember that every time you see someone that is one less time you see them. It is to remember that every time you go somewhere that is one less time you visit. By doing this, you naturally slow down. Almost like a reflex, you start to truly live.
 
 The best things I read this month were:
-- [[literature/lynda barry kios|Lynda Barry Will Make You Believe in Yourself by Dan Kios]]
-- [[literature/nightingalingale by mod|The Nightingalingale Newsletter by Craig Mod]]
+- [[lynda barry kios|Lynda Barry Will Make You Believe in Yourself by Dan Kios]]
+- [[nightingalingale mod|The Nightingalingale Newsletter by Craig Mod]]
 
 # Newsletters
 
