--- a/content/uman 2024-01.md
+++ b/content/uman 2024-01.md
@@ -47,7 +47,7 @@ I learned a lot about myself and my relationship with my religious past from the
 
 # Therapeutic Journey for the Free Spirit
 
-At the end of the Baguio walk, I spent about a week with my parents at Pangasinan. While there, I re-read [[andrew j brown|Andrew J. Brown's]] article ["The Freedom to Be Tomorrow What We Are Not Today](https://andrewjbrown.blogspot.com/2022/05/the-freedom-to-be-tomorrow-what-we-are.html), which contained a section about [[friedrich nietzsche|Friedrich Nietzsche's]] four-phased journey for the free spirit. Andrew told me it might help me think about the Baguio walk. I also read the first chapter of Gordon Bearn's book *Waking to Wonder* (1997), entitled  [[literature/superficial out of profundity bearn|"Superficial—Out of Profundity,"]] which provided an enlightening description of the journey.
+At the end of the Baguio walk, I spent about a week with my parents at Pangasinan. While there, I re-read [[andrew j brown|Andrew J. Brown's]] article ["The Freedom to Be Tomorrow What We Are Not Today](https://andrewjbrown.blogspot.com/2022/05/the-freedom-to-be-tomorrow-what-we-are.html), which contained a section about [[friedrich nietzsche|Friedrich Nietzsche's]] four-phased journey for the free spirit. Andrew told me it might help me think about the Baguio walk. I also read the first chapter of Gordon Bearn's book *Waking to Wonder* (1997), entitled  [[superficial out of profundity bearn|"Superficial—Out of Profundity,"]] which provided an enlightening description of the journey.
 
 Reading these two texts helped me understand that I'm still healing from leaving the JWs. To finish my healing process, I must recognize the things that brought warmth to me in my past life that I could still incorporate in my present life, albeit differently—things like faith, prayer, and ministry. Reading about the framework helped me understand that returning to places from my past brought out emotions that inform where I am in my healing journey and that walking to these places facilitates this process of incorporation.
 
