--- a/content/uman 2023-08.md
+++ b/content/uman 2023-08.md
@@ -46,11 +46,11 @@ I managed to publish three newsletter issues:
 
 # Lyric Essays
 
-This August, I decided to apply to a regional writer's workshop that accepted works in my native [[tags/pangasinan|Pangasinan]] language. At first, I thought I should send some Pangasinan poems (*anlong*), so I finished [[literature/billy collins masterclass|Billy Collins' Masterclass]], which I thought should help me revise the poems better. But after finishing the course, I came to a realization: I wanted to focus on writing [[thoughts/lyric essay|lyric essays]]. This is a genre of writing that I have been doing for the past two years long before I've ever discovered the term, and although I love reading and writing poetry, I wanted to stay closer to something that was true to me and get better at it. Plus, the book about walking in Los Baños, which I am currently working on will be a book of lyric essays. Might as well practice now.
+This August, I decided to apply to a regional writer's workshop that accepted works in my native [[tags/pangasinan|Pangasinan]] language. At first, I thought I should send some Pangasinan poems (*anlong*), so I finished [[billy collins masterclass|Billy Collins' Masterclass]], which I thought should help me revise the poems better. But after finishing the course, I came to a realization: I wanted to focus on writing [[thoughts/lyric essay|lyric essays]]. This is a genre of writing that I have been doing for the past two years long before I've ever discovered the term, and although I love reading and writing poetry, I wanted to stay closer to something that was true to me and get better at it. Plus, the book about walking in Los Baños, which I am currently working on will be a book of lyric essays. Might as well practice now.
 
 What resulted was [[mulimuli pangasiniani|Mulimuli Pangasiniani]], which I translated into English as [[translations/perturbations on pangasiniani|Perturbations on Pangasiniani]]. It is a lyric essay about my personal struggles in writing in my mother tongue.
 
-While working on this essay, I read the works of other lyric essayists. A book that was particularly helpful was the anthology *[[literature/a harp in the stars by noble|A Harp in the Stars]]* edited by R. B. Noble.
+While working on this essay, I read the works of other lyric essayists. A book that was particularly helpful was the anthology *[[a harp in the stars noble|A Harp in the Stars]]* edited by R. B. Noble.
 
 # Epistolary Essays on Walking
 
