--- a/content/2024-05 to 2024 diary.md
+++ b/content/2024-05 to 2024 diary.md
@@ -54,4 +54,6 @@ tags:
 [[2024-08-14]]: [[calab mt balungao]]; [[mandigdig tondaligan]]
 [[2024-08-15]]: [[tayacdang san jacinto]]; [[onsalilig mangaldan]]; [[ponpon san jacinto]]
 
+[[2024-08-17]]: [[Cotoscotos Manaoag]]
+
 [[2024-08-24]]: [[licaulicau dagupan]]
