--- a/content/2024-08-29 seeds.md
+++ b/content/2024-08-29 seeds.md
@@ -8,3 +8,13 @@ tags:
   - seeds
 ---
 Daily conflicts begin with a lazy choice to react to people overstepping our boundaries through passive aggressive behavior rather than approaching them, getting to know them better, if possible establishing a form of relationship no matter how small, and airing our concern with the goal of reaching a compromise.
+
+Look for a reference to walking in Mel Orpilla's poems then use it as a title. And then reference this title in the essay itself.
+
+Since you are meditating about walking, it might be useful to narrate how you stumbled upon N number of words in Pangasinan that refer to walking. Put this at the Tayacdang subheading.
+
+And then lessen the walks.
+
+I could remove Saliasiao. Its too heavy a story and too little walking.
+
+Lessen parts of the stories that are not related to walking.
