--- a/content/2024-08-31 seeds.md
+++ b/content/2024-08-31 seeds.md
@@ -13,3 +13,6 @@ And that faith can have a different subject.
 A Marxist's faith is in a future realized by collective action.
 
 A faith to a utopian future is a love affair.
+
+Why do we have to walk when we hold hands?
+As if it's not enough that we hold
