--- a/content/2024-08-09 seeds.md
+++ b/content/2024-08-09 seeds.md
@@ -7,7 +7,7 @@ tags:
   - thoughts
   - seeds
 ---
-[[different kinds of walks in the philippines]]
+- [[different kinds of walks in the philippines]]
 
 Laboy
 Libot
@@ -17,9 +17,9 @@ Lakbayan
 If a written form will directly represent a walk, that form will either be a draft or a hybrid piece.
 
 Write a minimal set of principles.
-Set up sendy.
+Set up Sendy.
 Announce new names for newsletters.
-- Drafts: occassional essays
+- Drafts: occasional essays
 - Changes: monthly essays
 
 Quest (Purpose): To understand the universe and how to be in it.
