--- a/content/2024-08-12 seeds.md
+++ b/content/2024-08-12 seeds.md
@@ -7,6 +7,6 @@ tags:
   - thoughts
   - seeds
 ---
-Because spirituality is a human product always embedded in syncretic intellectual, emotional, and social life, a spirituality aloofed to the struggle of the people is no spirituality.
+Because spirituality is a human product always embedded in syncretic intellectual, emotional, and social life, a spirituality aloof to the struggle of the people is no spirituality.
 
 Once I'm better versed in walking technologies, I would like to lead derives around LB.
