--- a/content/2024-08-29 seeds.md
+++ b/content/2024-08-29 seeds.md
@@ -7,6 +7,8 @@ tags:
   - thoughts
   - seeds
 ---
+- [[conflict resolution]]
+
 Daily conflicts begin with a lazy choice to react to people overstepping our boundaries through passive aggressive behavior rather than approaching them, getting to know them better, if possible establishing a form of relationship no matter how small, and airing our concern with the goal of reaching a compromise.
 
 Look for a reference to walking in Mel Orpilla's poems then use it as a title. And then reference this title in the essay itself.
