--- a/content/2024-08-07 seeds.md
+++ b/content/2024-08-07 seeds.md
@@ -7,6 +7,8 @@ tags:
   - thoughts
   - seeds
 ---
+- [[kotse]]
+
 Kotse ang nagpapakain sayong pamilya
 Kotse ang doktrina
 Kotse ang pambansang bayani
@@ -16,7 +18,7 @@ Nakahihinga ako ng malinis na hangin dahil sa kotse
 Kotse ang valedictorian
 Pati na rin ang salutatorian
 Kotse ang manager, supervisor,
-Pati mayari ng kompanya
+Pati may-ari ng kompanya
 
 Anak ka ng kotse
 Kotse ng ina mo
