--- a/content/thoughts/2023-03 to 2023-10 diary.md
+++ b/content/thoughts/2023-03 to 2023-10 diary.md
@@ -40,7 +40,7 @@ tags:
 [[2023-05-05]]: More thoughts on Ocean Vuong, uncluding, somehow, he reminds me of [[rem tanauan]]; [[thoughts/writing prose as a poet]]
 [[2023-05-06]]: [[the very first memory]]
 [[2023-05-08]]: Hotter at LB; Controlling Messenger
-[[2023-05-09]]: How to Feel Miserable as an Artist, which I translated to [[translations/paano maging miserableng artist]]
+[[2023-05-09]]: How to Feel Miserable as an Artist, which I translated to [[paano maging miserableng artist]]
 [[2023-05-10]]: My uncensored thoughts on my parents' reaction after telling them about ANWW20
 [[2023-05-11]]: [[vignettes/walking mt data street]]
 [[2023-05-12]]: [[thoughts/saming ili]]
