--- a/content/uman 2023-09.md
+++ b/content/uman 2023-09.md
@@ -54,7 +54,7 @@ I published three newsletters in September:
 
 # Writing Events Applications
 
-Last August, I wrote [[mulimuli pangasiniani|a lyric essay]] in Pangasinan and its [[translations/perturbations on pangasiniani|English translation]] and sent it for my application to the Cordillera Creative Writing Workshop (CCWW). The rejection of my application got me thinking a lot about how I'm approaching these applications and my writing life. I'll write a more detailed essay about this, but here's my new personal guiding principle when sending entries to workshops, fellowships, and contests.
+Last August, I wrote [[mulimuli pangasiniani|a lyric essay]] in Pangasinan and its [[perturbations on pangasiniani|English translation]] and sent it for my application to the Cordillera Creative Writing Workshop (CCWW). The rejection of my application got me thinking a lot about how I'm approaching these applications and my writing life. I'll write a more detailed essay about this, but here's my new personal guiding principle when sending entries to workshops, fellowships, and contests.
 
 Since the acceptance rate to these writing events is pretty low (which means I was just fortunate to get in [[anww20|ANWW20]]!), the healthiest attitude when applying is to expect rejection. Then, use the application process to these events to force you to do your work. Remember that this is the assumption of most of these events anyway—that you are bringing a work in progress. So do that.
 
