--- a/content/2022-04-28 seeds.md
+++ b/content/2022-04-28 seeds.md
@@ -30,4 +30,4 @@ The big brown bird of my past walks is here. I can hear it. As well as the sikli
 
 I am thinking about starting a self-directed fellowship with some artist friends. It involves spending some time together reading other people's work. Since all are rough drafts there is no reason to down anyone. We just have to give community and other eyes.
 
-[[vignettes/losing another dirt road]]
+[[losing another dirt road]]
