--- a/content/2022-06-10 seeds.md
+++ b/content/2022-06-10 seeds.md
@@ -24,4 +24,4 @@ Cats sleeping on rafts
 
 Around the lake, the greens are also relatively thick. I did not expect to hear the same sound of insect chorus that I usually hear at LB.
 
-Diary entry: [[vignettes/sampaloc lake]]
+Diary entry: [[sa harap ng lawa ng sampaloc]]
