--- a/content/uman 2022-08.md
+++ b/content/uman 2022-08.md
@@ -105,10 +105,10 @@ A seed note I wrote recently ([[2022-08-30 seeds]]) captures my current thinking
 I wrote a new Lilim issue earlier last month: [[walking lopez 2|"Lilim 03(08) — Walking Lopez, Quezon Part II: A Fishpond at San Jose"]].
 
 In my digital forest garden, I also published first drafts of four vignettes:
-- [[vignettes/sampaloc lake]]
+- [[sa harap ng lawa ng sampaloc]]
 - [[vignettes/the ube halaya stores at san pablo]]
-- [[vignettes/ang mosque sa bulusan street]]
-- [[vignettes/the dirt roads are my kissas]]
+- [[ang mosque sa bulusan street]]
+- [[the dirt roads are my kissas]]
 
 These drafts could become future Lilim issues. Why I am publishing "drafts" will be explained in the next section.
 
