--- a/content/2022-05-12 seeds.md
+++ b/content/2022-05-12 seeds.md
@@ -12,4 +12,4 @@ Is it possible for a group of people to comprise the majority but not dominate?
 
 That which falls at Narra, is that a malabayabas? Or is it Dao?
 
-[[vignettes/an afternoon at binhi]]
+[[an afternoon at binhi]]
