--- a/content/2022-05-17 seeds.md
+++ b/content/2022-05-17 seeds.md
@@ -8,4 +8,4 @@ tags:
 8:50 am
 Some fishponds in Santa Teresa, Lopez, Quezon.
 
-[[vignettes/a morning walk at a fishpond in sta. teresa]]
+[[a morning walk at a fishpond in sta teresa]]
