--- a/content/thoughts/2023-03 to 2023-10 diary.md
+++ b/content/thoughts/2023-03 to 2023-10 diary.md
@@ -42,7 +42,7 @@ tags:
 [[2023-05-08]]: Hotter at LB; Controlling Messenger
 [[2023-05-09]]: How to Feel Miserable as an Artist, which I translated to [[paano maging miserableng artist]]
 [[2023-05-10]]: My uncensored thoughts on my parents' reaction after telling them about ANWW20
-[[2023-05-11]]: [[vignettes/walking mt data street]]
+[[2023-05-11]]: [[walking mt data street]]
 [[2023-05-12]]: [[thoughts/saming ili]]
 [[2023-05-13]]: Summary of [[Advice for ANWW20]]
 [[2023-05-14]]: Some thoughts on wisdom; Plans to make today great
@@ -143,7 +143,7 @@ tags:
 [[2023-09-10]]: Why QR codes for the Buhian entry
 [[2023-09-12]]: Exploring pastoral work; Why I have avoided this possibility; Writing as a form of teaching
 [[2023-09-14]]: Contemplating how to deal with patriarchy
-[[2023-09-15]]: [[vignettes/aglibut ave]]
+[[2023-09-15]]: [[aglibut ave]]
 [[2023-09-16]]: walking, draft, talahardin
 [[2023-09-17]]: Depression; Unease with the Bohol trip; iChing reading
 [[2023-09-22]]: Highlights of the Bohol trip; To dos
@@ -153,7 +153,7 @@ tags:
 [[2023-09-27]]: A spiritual life through words
 
 [[2023-10-01]]: Bulwak after a fight with Lea while walking
-[[2023-10-02]]: [[vignettes/writing as faith|writing as faith]]
+[[2023-10-02]]: [[writing as faith|writing as faith]]
 [[2023-10-03]]: thoughts after CIMB closure: simple life, source of income not business to get busy with
 [[2023-10-04]]: thoughts on [[writing]]; thoughts on [[freelancing]]
 [[2023-10-05]]: Thinking about my creative business setup
