--- a/content/thoughts/2023-08-07 seeds.md
+++ b/content/thoughts/2023-08-07 seeds.md
@@ -4,7 +4,7 @@ date: "2023-08-07"
 tags:
 - "seeds"
 ---
-- [[vignettes/kilala|kilala]]
+- [[kilala|kilala]]
 
 Note how boundary setting affects self confidence
 
