--- a/content/thoughts/2023-10-13 seeds.md
+++ b/content/thoughts/2023-10-13 seeds.md
@@ -4,7 +4,7 @@ date: 2023-10-13
 tags:
   - seeds
 ---
-- [[vignettes/noodles|Noodles]]
+- [[noodles|Noodles]]
 
 The boy just arrived. It is already 10:30 pm. He went straight to his room, opened the lights, and stayed there for around 30 minutes. Perhaps lying on his bed, resting. By 11:00, he is out of his room and into the kitchen. He opens the stove and puts a caserol of water to boil. I now smell noodles and wonder whether he has bought cooked rice.
 
