--- a/content/uman 2022-08.md
+++ b/content/uman 2022-08.md
@@ -106,7 +106,7 @@ I wrote a new Lilim issue earlier last month: [[walking lopez 2|"Lilim 03(08) â€
 
 In my digital forest garden, I also published first drafts of four vignettes:
 - [[sa harap ng lawa ng sampaloc]]
-- [[vignettes/the ube halaya stores at san pablo]]
+- [[the ube halaya stores at san pablo]]
 - [[ang mosque sa bulusan street]]
 - [[the dirt roads are my kissas]]
 
