--- a/content/2024-09-16 seeds.md
+++ b/content/2024-09-16 seeds.md
@@ -8,3 +8,5 @@ tags:
   - seeds
 ---
 I ran here to find a place to sow my seeds and take root. I didn't expect to have to navigate and negotiate with gravel and concrete.
+
+Somehow these walks are a form of healing my fundamentalism.
