--- a/content/2022-11-03 seeds.md
+++ b/content/2022-11-03 seeds.md
@@ -6,7 +6,7 @@ tags:
 - "seeds"
 ---
 
-- [[quotes/body or bridge clear]]
+- [[body or bridge clear]]
 
 "In some areas of life, value is unlocked by starting. Even a five-minute workout or a short walk can reset your mood and benefit your body.
 
