--- a/content/2023-07-09 seeds.md
+++ b/content/2023-07-09 seeds.md
@@ -5,7 +5,7 @@ tags:
 - "seeds"
 ---
 
-- [[thoughts/wonder|wonder]]
+- [[wonder|wonder]]
 
 The concepts of religion and spirituality are too hard for me to understand.
 
