--- a/content/2023-07-01 seeds.md
+++ b/content/2023-07-01 seeds.md
@@ -6,7 +6,7 @@ tags:
 - "seeds"
 ---
 
-- [[thoughts/queer art vs straight art|Queer art vs straight art]]
+- [[queer art vs straight art|Queer art vs straight art]]
 
 Notes from Butiki Baboy
 
