--- a/content/2024-09-21 seeds.md
+++ b/content/2024-09-21 seeds.md
@@ -19,7 +19,7 @@ Seiza is listening.
 
 julien.lecoz33@gmail.com
 
-all is one; one is all -> everything is God, everything is n Nature
+all is one; one is all -> everything is God, everything is in Nature
 
 Gabriel Vahanian
 - French Catholic theologian
