--- a/content/uman 2022-07.md
+++ b/content/uman 2022-07.md
@@ -97,5 +97,5 @@ Lastly, I read James Clear's web page on [goal-setting](https://jamesclear.com/g
 
 I created a few new notes to facilitate my thinking on this goal-setting process.
 - [[thoughts/warren buffet list]]
-- [[thoughts/how to set goals]]
+- [[how to set goals]]
 - [[thoughts/avoid-at-all cost life goals]]
