--- a/content/uman 2022-08.md
+++ b/content/uman 2022-08.md
@@ -94,7 +94,7 @@ I am taking baby steps towards this direction. I wrote the following notes where
 - [[Things I had in my past religious life I can incorporate in my current life]]
 - [[A comparison of my past religious life and my life today]]
 
-Thinking about religion, I couldn't not think about [[spirituality]]. Not long from my research, I realized that, unlike religion, most resources about the meaning of he word spirituality are written outside academic circles by spiritual gurus from different traditions. Scholars treat spirituality as something integral to religious studies and, therefore, does not give it its own discourse. That is starting to change as some philosophers are advocating for the establishent of a new ["philosophy of spirituality."](https://brill.com/view/title/37955) As currently conceptualized, spirituality seems to be closer to the concept of a "personal religion," a religion that is curated by the individual practitioner using different elements from different traditions available in a "spritual marketplace." Also, spirituality, as understood by psychologists, refers to the state of having spiritual experiences (or transcendental experiences), something that [[thoughts/scott barry kaufman]] discusses in his book *[[Transcend — Kaufman|Transcend]]*.
+Thinking about religion, I couldn't not think about [[spirituality]]. Not long from my research, I realized that, unlike religion, most resources about the meaning of he word spirituality are written outside academic circles by spiritual gurus from different traditions. Scholars treat spirituality as something integral to religious studies and, therefore, does not give it its own discourse. That is starting to change as some philosophers are advocating for the establishent of a new ["philosophy of spirituality."](https://brill.com/view/title/37955) As currently conceptualized, spirituality seems to be closer to the concept of a "personal religion," a religion that is curated by the individual practitioner using different elements from different traditions available in a "spritual marketplace." Also, spirituality, as understood by psychologists, refers to the state of having spiritual experiences (or transcendental experiences), something that [[thoughts/scott barry kaufman]] discusses in his book *[[transcend kaufman|Transcend]]*.
 
 A seed note I wrote recently ([[2022-08-30 seeds]]) captures my current thinking and dilemmas about the words "religion" and "spirituality." My current stand is to avoid using these words in my life work, at least for now, not because they are innacurate (my work indeed has a religious and spiritual element), but because they are too loaded that I might be misinterpreted. I don't have a clear alternative. But for now, I will stick to philosophy or "way of life" as labels to my project.
 
