--- a/content/uman 2022-07.md
+++ b/content/uman 2022-07.md
@@ -53,7 +53,7 @@ I particularly enjoyed Mooney's lyrical writing, although it can be cryptic some
 
 ## Ordinary language philosophy
 
-I also explored [[Ordinary language philosophy|ordinary language philosophy]], which was a reaction to the attempt by [[Bertrand Russell]] and the like to create a specialized language for philosophers based on logic. They argued that words and concepts could not be understood in isolation but in how they are used in everyday life. [[thoughts/ludwig wittgenstein]] was one, if not the most influential proponent of ordinary language philosophy. To explore Wittgenstein, I read a few chapters from the book [Wittgenstein's Artillery](https://www.goodreads.com/book/show/55871660-wittgenstein-s-artillery).
+I also explored [[Ordinary language philosophy|ordinary language philosophy]], which was a reaction to the attempt by [[Bertrand Russell]] and the like to create a specialized language for philosophers based on logic. They argued that words and concepts could not be understood in isolation but in how they are used in everyday life. [[ludwig wittgenstein]] was one, if not the most influential proponent of ordinary language philosophy. To explore Wittgenstein, I read a few chapters from the book [Wittgenstein's Artillery](https://www.goodreads.com/book/show/55871660-wittgenstein-s-artillery).
 
 ## Ideas on experimenting with lyrical philosophy
 
