--- a/content/uman 2023-07.md
+++ b/content/uman 2023-07.md
@@ -15,7 +15,7 @@ tags:
 
 ![Girls in uniform](girls-in-uniform.jpg)
 
-A walk on the afternoon of [[daily notes/2023-07-12|July 12]] made me realize that [[my note-writing practice|my note-writing practice]] was too important to exchange for some time to make money in the morning. This realization led me to review my writing life in general, including my systems and routines and evaluate them against my creative goals. I wanted to check whether my current writing practice is leading me toward my goals. The result was a better articulation of [[my poetics|my poetics]]. While going through this process I remembered that what I truly wanted to write is [[lyrical philosophy|lyrical philosophy]]—words that combine the beauty of the poem and the depth of philosophical inquiry. Thus, I articulated [[thoughts/how to practice and write lyrical philosophy|how to practice and write lyrical philosophy]].
+A walk on the afternoon of [[daily notes/2023-07-12|July 12]] made me realize that [[my note-writing practice|my note-writing practice]] was too important to exchange for some time to make money in the morning. This realization led me to review my writing life in general, including my systems and routines and evaluate them against my creative goals. I wanted to check whether my current writing practice is leading me toward my goals. The result was a better articulation of [[my poetics|my poetics]]. While going through this process I remembered that what I truly wanted to write is [[lyrical philosophy|lyrical philosophy]]—words that combine the beauty of the poem and the depth of philosophical inquiry. Thus, I articulated [[how to practice and write lyrical philosophy|how to practice and write lyrical philosophy]].
 
 So, this July, I got some more writing done. While making significant progress in the current website design and development projects I'm doing for two clients, both of which are ready to launch, I was also able to produce some work.
 
